sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:3: error: not found: value lentgh
	for (i <- 0 to lentgh-2) { 
                       ^