sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
	for (i <- 0 to lentgh-2) { 
		if (tab(j) < tab(minpos)) { 
			echange;
		}
		
		
				
			}
}
		

		
		
